--- a/Sample/res/drawable/input_card.xml
+++ b/Sample/res/drawable/input_card.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="0dp" android:left="0dp" android:bottom="0dp" android:right="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/card_shadow"/>
+            <solid android:color="@color/card_light_shadow"/>
             <corners android:radius="2dip" />
         </shape>
     </item>
     <item android:top="0dp" android:left="0dp" android:bottom="2dp" android:right="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/card_background"/>
+            <solid android:color="@color/white"/>
         </shape>
     </item>
 </layer-list>
