--- a/Sample/res/values/colors.xml
+++ b/Sample/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="card_border">#ffdedede</color>
     <color name="card_background">#f3f3f3</color>
     <color name="card_shadow">#ffd6d6d6</color>
+    <color name="card_light_shadow">#ffe5e5e5</color>
     
     
 </resources>
