--- a/Sample/res/drawable/input_card.xml
+++ b/Sample/res/drawable/input_card.xml
@@ -4,11 +4,13 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/card_light_shadow"/>
             <corners android:radius="2dip" />
+            <stroke android:color="@color/card_light_shadow" />
         </shape>
     </item>
     <item android:top="0dp" android:left="0dp" android:bottom="2dp" android:right="0dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
+            <corners android:radius="2dip" />
         </shape>
     </item>
 </layer-list>
