--- a/Sample/res/values/dimens.xml
+++ b/Sample/res/values/dimens.xml
@@ -3,10 +3,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="global_margin">5dp</dimen>
-    <dimen name="global_padding">3dp</dimen>
+    <dimen name="global_margin">8dp</dimen>
+    <dimen name="global_padding">5dp</dimen>
     
-    <dimen name="input_height">40dp</dimen>
+    <dimen name="input_height">35dp</dimen>
     <dimen name="input_large_height">50dp</dimen>
+    <dimen name="left_indent">10dp</dimen>
+    
+    <dimen name="title">35dp</dimen>
 
 </resources>
